# world

./: .XCompose  .Xresources  .Xsession  .aerospace.toml  .authinfo.py  .awesomerc  .bash_profile  .bashrc  .bazelrc  .conkerorrc  .ctags  .cvsignore  .cvsrc  .cwmrc  .devcontainer.json  .dockerignore  .emacs.d.gup  .fdm.conf  .gemrc  .gitconfig  .gitignore  .gnus.el  .golangci.yml  .hammerspoon  .hgignore  .hgignore-global  .hgmode  .hgrc  .inputrc  .kshrc  .login  .luacheckrc  .mailcap  .master.conf  .mbsyncrc  .meta.conf  .mobi.conf  .mpdconf  .msmtprc  .muttalias  (+100 more)
.attic/: socks.conf
.brain/: faq  music
.cal/: main.ics
.calendar/: badgersbb  birthdays  calendar  other  work
.claude/: .ignore  CLAUDE.md  hammerspoon-modal-design.md  hooks.lua  settings.json
.config/: shimlink.json
.devcontainer/: BUILD.bazel  devcontainer.json  entrypoint.sh  group  passwd  sudoers  test.json
.docker/: config.json
.dsh/: config  config-hep
.dwm/: config.h  menu  status  status.py  status.sh
.elinks/: bookmarks  elinks.conf
.emacs.d/: .ercrc.el  ido-other-window.el  ido.el  init-old.el  init.el  ipython.el  nssh.el  rcirc.el  shell-here.el
.fdm/: archive  family  filter  patterns
.getmail/: getmailrc-hep  getmailrc-uw
.gitconf/: ignore
.github/: CODEOWNERS  matchers.json  matchers.sh  pr.md  release.tmpl
.gnupg/: gpg.conf
.hammerspoon/: init.lua
.hgext/: bookrepo.py  branchrepo.py
.i3/: config
.ion3/: cfg_bindings.lua  cfg_ion.lua  cfg_ioncore.lua  cfg_kludges.lua  cfg_menus.lua  cfg_sp.lua  cfg_statusbar.lua  look_bas.lua  look_mine.lua  statusd_hostname.lua  statusd_mpd.lua  statusd_uptime.lua  toggle_named_scratchpad.lua
.ipython/: ipy_user_conf.py  ipythonrc
.irssi/: config  default.theme  plugin.theme  startup
.mailfilters/: lists  main  work
.mercurial/: bitbucket.hgrc  ignores  mirror.hgrc  short.style  short.tmpl
.misc/: ddclient.conf  mpd.conf  xorg.conf-external-video
.mutt/: aliases  color  default  gmail  hep  laura  ml1  mobi  pgp  physics  priority  smime
.ncmpc/: config
.nix/: nix.conf
.nix-defexpr/: nixpkgs
.nixpkgs/: config.nix
.pf/: single
.postfix/: CA.sh  README  TODO  lfod.us-hub-master.cf  lfod.us-hub.cf  lfod.us-submit.cf
.profiles/: aliases  functions
.python/: requirements.txt
.ratm/: config
.remind/: birthdays  functions  holidays  main  todo  work
.screen/: rc-comms  rc-info  rc-meta  rc-shells  rc-ssh  rc-www  screenrc
.scripts/: batt.py  batt.sh  bbsched2rem.py  browser  browser.sh  bsdbatt.sh  build-tex.sh  checkradmind.py  committodo.sh  cvsup.sh  dsh.sh  dvd2disk.sh  edit.sh  editmoin  fpkg.py  get-show.py  getmail.sh  grepmail.sh  hgeditor  linuxrip.sh  lock.sh  lockdown.py  lsx  memsnap.pl  mklocal.pl  mpc.sh  mpcosd.sh  mpdosd.py  name.sh  obsdup  password.py  pkg_ftp  rip.sh  sched2cal.py  scrobbler.py  smsrewrite  sterm  streamripper.sh  term  today  (+5 more)
.sendmail/: README  lfod.us-hub.mc  lfod.us-submission.mc  lfod.us.mc
.signatures/: cae  cae-rt  default  hep  laura  list  list-bsd  respectable
.snownews/: keybindings  urls
.solarized/: light
.spacemacs.d/: init.el
.ssh/: authorized_keys  config  known_hosts  known_hosts.always
.terminal/: solarized-dark.terminal  solarized-light.terminal
.tmux/: colors.conf  comms-new.conf  comms.conf  files-new.conf  files.conf  frame.conf  logins-new.conf  logins.conf  logs-new.conf  logs.conf  master-new.conf  master.conf  meta.conf  (+6 more)
3p/deb/: BUILD.bazel  debs.bzl  debs.py  repo.bzl  update.sh  uris.sh  write.py
aws/: BUILD.bazel  aws.sh  awscli.py  configure.py
cmd/3p/: BUILD.bazel  bazel.go  github.go  github_archive.go  go.go  main.go  vim_repository.go
cmd/auth-bot/: BUILD.bazel  index.ts
cmd/bandit/: BUILD.bazel  bandit.py  test.json
cmd/black/: BUILD.bazel  action.yml  black.py  test.json
cmd/bot/: BUILD.bazel  action.yml  index.ts  test.json
cmd/buildifier/: BUILD.bazel
cmd/eslint/: BUILD.bazel  test.json
cmd/gazelle/: BUILD.bazel  test.json
cmd/gh/: BUILD.bazel  auth.go  dump.go  env.go  gh.go  main.go  pr.go  release.go  tags.go  test.json  wrap.go
cmd/golangci-lint/: BUILD.bazel  test.json
cmd/prettier/: BUILD.bazel  test.json
cmd/pyright/: BUILD.bazel  test.json
cmd/renovate/: BUILD.bazel  test.json
cmd/shellcheck/: BUILD.bazel  shellcheck.go  test.json
cmd/shfmt/: BUILD.bazel
cmd/tools/: BUILD.bazel  main.go
home/: .bashrc  .ctags  .editrc  .gitconfig  .profile  BUILD.bazel  MANIFEST.txt  files.bzl  main.lua  test_main.lua
home/.config/git/: ignore
home/.ssh/: config
home/config/kitty/: dark.conf  kitty.conf  light.conf
home/dots/: .gitconfig  .inputrc
home/gitconf/: ignore
home/gnupg/: gpg.conf
image/: BUILD.bazel  _nvr.py  _pip.py  archive.sh  black.py  debs.bzl  debs.py  debs.sh  files.bzl  flake8.py  group  passwd  run-flake8.py  run-nvr.py  run.sh  sshd_config  test.sh  test.ts
image/auth-bot/: BUILD.bazel  action.yml
image/black/: BUILD.bazel  black.py  test.json
image/bot/: action.yml  index.ts  test.json
image/buildifier/: BUILD.bazel  test.json
image/devcontainer/: BUILD.bazel  entrypoint.sh  group  passwd  post.sh  subgid  test.json
image/eslint/: BUILD.bazel  test.json
image/go/: BUILD.bazel  test.json
image/golangci-lint/: BUILD.bazel
image/linter/: BUILD.bazel  test.json
image/linter/black/: BUILD.bazel
image/linter/buildifier/: BUILD.bazel
image/linter/shfmt/: BUILD.bazel
image/node/: BUILD.bazel  test.json
image/prettier/: BUILD.bazel
image/shfmt/: BUILD.bazel  test.json
nvim/: BUILD.bazel  files.bzl  init.vim
nvim/autoload/: osc52.vim
nvim/ftplugin/: bzl.vim  go.vim  java.vim  json.vim  markdown.vim  python.vim  sh.vim  vim.vim  yaml.vim
python/: BUILD.bazel  requirements.txt  wrapper.go
requirements/: BUILD.bazel  compile.py  test.py
tools/: BUILD.bazel  bazel  bazel.rc  bootstrap.sh  entrypoint  get-bazel.sh  get-status.sh  gup-travis  gup.gup  install-bazel.sh  install-travis.sh  osx.sh  run-bazel.sh  run-travis.sh  setup-osx.sh  setup-travis.sh  workspace_status.sh
versions/: BUILD.bazel  versions.bzl  versions.py
(+1531 files in other folders)
