load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")

# gazelle:prefix github.com/whilp/world

exports_files([
    "jest.config.js",
    "tsconfig.json",
    "package.json",
    "pyrightconfig.json",
    "yarn.lock",
    "requirements.txt",
    "requirements.in",
])

pkg_npm(
    name = "world",
    package_name = "world",
)
