load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "tar",
    files = {
        "//bin:cdpath": "./bin/cdpath",
    },
    mode = "0600",
    package_dir = "/home/me",
    symlinks = {
        "./home/me/src": "/src",
        "./home/me/.cache": "/cache",
        "./home/me/.ipython": "/home/me/.config/ipython",
        "./home/me/.bashrc": "/home/me/.profile",
        "./home/me/.bash_profile": "/home/me/.profile",
        "./home/me/.awsvault": "/home/me/.cache/awsvault",
    },
    visibility = ["//visibility:public"],
    deps = [
        ":dot_config",
        ":dot_docker",
        ":dot_gitconf",
        ":dot_gnupg",
        ":dot_python_bin",
        ":dot_ssh",
        ":dotfiles",
        "//nvim:config",
        "//nvim:site",
    ],
)

pkg_tar(
    name = "dotfiles",
    srcs = glob(["dots/*"]),
)

pkg_tar(
    name = "dot_ssh",
    srcs = glob(["ssh/*"]),
    mode = "0600",
    package_dir = "./.ssh",
)

pkg_tar(
    name = "dot_gitconf",
    srcs = glob(["gitconf/*"]),
    package_dir = "./.gitconf",
)

pkg_tar(
    name = "dot_gnupg",
    srcs = glob(["gnupg/*"]),
    package_dir = "./.gnupg",
)

pkg_tar(
    name = "dot_docker",
    srcs = glob(["docker/*"]),
    package_dir = "./.docker",
)

pkg_tar(
    name = "dot_python_bin",
    srcs = ["keep"],
    package_dir = "./.python/bin",
)

pkg_tar(
    name = "dot_config",
    package_dir = "/.config",
    deps = [
        ":dot_config_ipython",
    ],
)

pkg_tar(
    name = "dot_config_ipython",
    srcs = ["keep"],
    package_dir = "ipython",
)
