load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

exports_files(["init.vim", "files.bzl"])

pkg_tar(
    name = "config",
    package_dir = "/.config/nvim",
    srcs = glob(["*.vim"]),
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "site",
    package_dir = "/.local/share/nvim/site/pack/plugins/start",
    visibility = ["//visibility:public"],
    deps = [
            "@vim_airline//:tar",
            "@vim_ale//:tar",
            "@vim_go//:tar",
            "@vim_sneak//:tar",
            "@vim_surround//:tar",
            "@vim_repeat//:tar",
            "@vim_fugitive//:tar",
            "@vim_confirm_quit//:tar",
            "@vim_unimpaired//:tar",
            "@vim_fzf//:tar",
            "@vim_fzf_vim//:tar",
            ":languageclient",
    ],
)

pkg_tar(
    name = "languageclient",
    strip_prefix = ".",
    deps = [
        "@vim_language_client_neovim//:tar",
    ],
    files = {
        "@language_client_neovim//file": "./vim_language_client_neovim/bin/languageclient",
    },
)
