load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

exports_files([
    "init.vim",
    "files.bzl",
])

pkg_tar(
    name = "config",
    srcs = glob([
        "**/*.vim",
        "*.vim",
    ]),
    package_dir = "/.config/nvim/.",
    strip_prefix = ".",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "site",
    package_dir = "/.local/share/nvim/site/pack/plugins/start",
    visibility = ["//visibility:public"],
    deps = [
        ":languageclient",
        "@vim_airline//:tar",
        "@vim_airline_themes//:tar",
        "@vim_ale//:tar",
        "@vim_base16_neovim//:tar",
        "@vim_clipper//:tar",
        "@vim_fugitive//:tar",
        "@vim_fzf//:tar",
        "@vim_fzf_vim//:tar",
        "@vim_go//:tar",
        "@vim_godlygeek_tabular//:tar",
        "@vim_mucomplete//:tar",
        "@vim_plasticboy_vim_markdown//:tar",
        "@vim_repeat//:tar",
        "@vim_signify//:tar",
        "@vim_sneak//:tar",
        "@vim_surround//:tar",
        "@vim_unimpaired//:tar",
    ],
)

pkg_tar(
    name = "languageclient",
    files = {
        "@language_client_neovim//file": "./vim_language_client_neovim/bin/languageclient",
    },
    strip_prefix = ".",
    deps = [
        "@vim_language_client_neovim//:tar",
    ],
)
