load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("@pypi//:requirements.bzl", "requirement")

deps = [
    requirement("pip"),
    requirement("pip_tools"),
    requirement("setuptools"),
    requirement("click"),
    requirement("six"),
]

py_binary(
    name = "compile",
    srcs = ["compile.py"],
    data = ["//:requirements.in"],
    deps = deps,
)

py_library(
    name = "lib",
    srcs = ["compile.py"],
    deps = deps,
)

py_test(
    name = "test",
    srcs = ["test.py"],
    data = [
        "//:requirements.in",
        "//:requirements.txt",
    ],
    deps = deps + [":lib"],
)
