genrule(
    name = "get-status",
    srcs = ["get-status.sh"],
    outs = ["generated-get-status.sh"],
    cmd = "(" +
          "cat $(location get-status.sh); " +
          "sed -e 's/^/## stable /' < bazel-out/stable-status.txt; " +
          "sed -e 's/^/## volatile /' < bazel-out/volatile-status.txt; " +
          ") > $@",
    executable = True,
    stamp = True,
)
