load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

exports_files(glob(["*.bzl"]))

sh_binary(
    name = "update",
    srcs = ["update.sh"],
    args = ["$(location @com_github_bazelbuild_buildtools//buildifier)"],
    data = [
        ":uris",
        ":uris.digest",
        ":write",
        "@com_github_bazelbuild_buildtools//buildifier",
    ],
)

py_binary(
    name = "write",
    srcs = ["write.py"],
)

container_image(
    name = "uris",
    base = "@ubuntu//image",
    cmd = ["/uris.sh"],
    files = ["uris.sh"],
)
