load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
    name = "auth-bot",
    data = [
        ":lib",
    ],
    entry_point = "index.ts",
)

ts_library(
    name = "lib",
    srcs = ["index.ts"],
    deps = [
        "@npm//@octokit/auth-app",
        "@npm//@octokit/rest",
    ],
)
