load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

nodejs_image(
    name = "bot",
    base = ":base",
    data = [
        ":lib",
    ],
    entry_point = "index.ts",
)

container_image(
    name = "base",
    base = "@nodejs_image_base//image",
    env = {
        "BOT_ID": "",
        "BOT_KEY": "",
        "BOT_CLIENT_ID": "",
        "BOT_CLIENT_SECRET": "",
        "BOT_INSTALLATION_ID": "",
    },
)

ts_library(
    name = "lib",
    srcs = ["index.ts"],
    deps = [
        "@npm//@octokit/auth-app",
        "@npm//@octokit/rest",
    ],
)

container_push(
    name = "push",
    format = "Docker",
    image = ":bot",
    registry = "index.docker.io",
    repository = "whilp/bot",
    tag = "latest",
)

container_test(
    name = "test",
    configs = ["test.json"],
    image = ":bot",
)
