load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")

container_image(
    name = "buildifier",
    args = [
        "-lint=fix",
        "-mode=fix",
        "-r",
        "-v",
        ".",
    ],
    base = "@cc_image_base//image",
    entrypoint = ["/buildifier"],
    files = ["@buildifier//file"],
)

container_push(
    name = "push",
    format = "Docker",
    image = ":buildifier",
    registry = "index.docker.io",
    repository = "whilp/buildifier",
    tag = "latest",
)

container_test(
    name = "test",
    configs = ["test.json"],
    image = ":buildifier",
)
