load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
load("//cmd:wrapper.bzl", "wrap")

FILE = "@buildifier//file"

ARGS = [
    "-lint=fix",
    "-mode=fix",
    "-r",
    "-v",
]

wrap(
    name = "buildifier",
    args = ARGS,
    file = FILE,
)

container_image(
    name = "image",
    args = ARGS + ["."],
    base = "@cc_image_base//image",
    entrypoint = ["/buildifier"],
    files = [FILE],
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "whilp/buildifier",
    tag = "latest",
)

container_test(
    name = "test",
    configs = ["test.json"],
    image = ":image",
)
