load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("//cmd:labels.bzl", "labels")

ARGS = [
    "--fix",
]

DATA = [
    "@npm//@typescript-eslint/eslint-plugin",
    "@npm//eslint",
]

ENTRY_POINT = "@npm//:node_modules/eslint/bin/eslint.js"

nodejs_binary(
    name = "eslint",
    args = ARGS,
    data = DATA,
    entry_point = ENTRY_POINT,
)

nodejs_image(
    name = "image",
    args = ARGS + ["."],
    base = ":base",
    data = DATA,
    entry_point = ENTRY_POINT,
)

container_image(
    name = "base",
    base = "@nodejs_image_base//image",
    labels = labels({"org.opencontainers.image.description": "ESlint"}),
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "ghcr.io",
    repository = "whilp/eslint",
    tag = "latest",
)

container_test(
    name = "test",
    configs = ["test.json"],
    image = ":image",
)
