load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
load("//cmd:labels.bzl", "labels")

gazelle(name = "gazelle")

# TODO: ensure we get goos/goarch/pure compatible with the docker container.
FILE = "@bazel_gazelle//cmd/gazelle"

container_image(
    name = "image",
    args = [
        "fix",
        ".",
    ],
    base = "@cc_image_base//image",
    entrypoint = ["/gazelle"],
    files = [FILE],
    labels = labels({"org.opencontainers.image.description": "gazelle linter"}),
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "ghcr.io",
    repository = "whilp/gazelle",
    tag = "latest",
)

container_test(
    name = "test",
    configs = ["test.json"],
    image = ":image",
)
