load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_binary(
    name = "gh",
    embed = [":gh_lib"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

go_library(
    name = "gh_lib",
    srcs = ["main.go"],
    importpath = "github.com/whilp/world/cmd/gh",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_apex_log//:log",
        "@com_github_apex_log//handlers/cli",
        "@com_github_google_go_github_v32//github",
        "@org_golang_x_oauth2//:oauth2",
    ],
)

go_image(
    name = "image",
    base = "@go_image_static//image",
    binary = ":gh",
    visibility = ["//visibility:public"],
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "whilp/gh",
    tag = "latest",
)

container_test(
    name = "test",
    configs = ["test.json"],
    image = ":image",
)
